Group Id in pom.xml update

--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>BRATEval</groupId>
+  <groupId>au.com.nicta.csp</groupId>
   <artifactId>BRATEval</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>BRATEval</name>
@@ -21,6 +21,6 @@
     </plugins>
   </build>
   <scm>
-  	<url>https://bitbucket.org/ajjimeno/brateval</url>
+  	<url>https://bitbucket.org/nicta_biomed/brateval</url>
   </scm>
 </project>
