--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.0</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source/>
+          <target/>
         </configuration>
       </plugin>
     </plugins>
