--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <repository>
       <id>github</id>
       <name>GitHub BratEval Apache Maven Packages</name>
-      <url>https://maven.pkg.github.com/aalbahem/brateval</url>
+      <url>https://maven.pkg.github.com/READ-BioMed/brateval</url>
     </repository>
   </distributionManagement>
 
